--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Navigation -->
 
             <div class="container">
-                <a class="navbar-brand mb-0 fs-1 fw-bold" href="#">WAHYU DWI CAHYADI</a>
+                <a class="navbar-brand mb-0 fs-1 fw-bold" href="#">Devi Wulan Setiani</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
